Refactoring saveMobileContent Method