@@ -5,7 +5,6 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.iskm.admin.web.dto.res.AddUserDTO;
 import org.iskm.admin.web.dto.res.AddUserResponse;
@@ -25,10 +24,9 @@ import org.iskm.admin.web.repository.UserRepository;
 import org.iskm.admin.web.repository.WebImageRepository;
 import org.iskm.admin.web.util.CommonUtil;
 import org.iskm.admin.web.util.PasswordUtil;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+
 import org.springframework.web.multipart.MultipartFile;
 
 import jakarta.persistence.EntityNotFoundException;
@@ -38,18 +36,17 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @Service
 public class UserService {
-	
-	private final UserRepo repo;
-	 private final CommonUtil commonUtil;
-	 private final ContentRepository contentRepository;
-	 private final UserRepository userRepository;
-	 private final WebImageRepository webImageRepository;
-	 private final MobileImageRepository mobileImageRepository;
-	
-	@Autowired
-	public UserService(UserRepo repo, CommonUtil commonUtil, ContentRepository contentRepository,
-			UserRepository userRepository, WebImageRepository webImageRepository,
-			MobileImageRepository mobileImageRepository) {
+
+    private final UserRepo repo;
+    private final CommonUtil commonUtil;
+    private final ContentRepository contentRepository;
+    private final UserRepository userRepository;
+    private final WebImageRepository webImageRepository;
+    private final MobileImageRepository mobileImageRepository;
+
+    public UserService(UserRepo repo, CommonUtil commonUtil, ContentRepository contentRepository,
+            UserRepository userRepository, WebImageRepository webImageRepository,
+            MobileImageRepository mobileImageRepository) {
         this.repo = repo;
         this.commonUtil = commonUtil;
         this.contentRepository = contentRepository;
@@ -57,9 +54,9 @@ public class UserService {
         this.webImageRepository = webImageRepository;
         this.mobileImageRepository = mobileImageRepository;
     }
-	
+
     public Response saveUser(AddUserDTO addUserDTO) {
-		AddUserResponse res;
+        AddUserResponse res;
         try {
             var creationTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss"));
             addUserDTO.setPassword(PasswordUtil.encodePassword(addUserDTO.getPassword()));
@@ -72,96 +69,102 @@ public class UserService {
             res = new AddUserResponse(false);
         }
         return res;
-    }   
-    
-    @Transactional
+    }
+
+    // @Transactional
     public void updatePassword(String userName, String newPassword) {
-    	try {
-        User user = userRepository.findByUsername(userName)
-            .orElseThrow(() -> new EntityNotFoundException("User not found"));
+        try {
+            User user = userRepository.findByUsername(userName)
+                    .orElseThrow(() -> new EntityNotFoundException("User not found"));
 
-        String hashedPassword = (PasswordUtil.encodePassword(newPassword));
-        user.setPassword(hashedPassword);
-        userRepository.save(user);
-    	}catch(Exception ex) {
-    		log.info("Update password failed with exception :: ",ex);
-    	}
+            String hashedPassword = (PasswordUtil.encodePassword(newPassword));
+            user.setPassword(hashedPassword);
+            userRepository.save(user);
+        } catch (Exception ex) {
+            log.info("Update password failed with exception :: ", ex);
+        }
     }
-    
+
     public void saveContent(ContentRequest request, String channel) {
-    	 List<WebImage> webImageList = new ArrayList<>();
-         List<MobileImage> mobileImageList = new ArrayList<>();
-         Content content = new Content(
-               CommonUtil.generateUUID(),
-               request.getPageTitle(), request.getPageContent(),
-               request.getStatus() != null ? request.getStatus() : "draft",
-               LocalDateTime.now(), webImageList, mobileImageList
-       );
-    	if (channel.equalsIgnoreCase("web")) {
-    		savingWebContent(request, webImageList, content);
-    		
-    	} else {	
-    		savingMobileContent(request, mobileImageList, content);
-    		
-    	}
-    	
-        
+        List<WebImage> webImageList = new ArrayList<>();
+        List<MobileImage> mobileImageList = new ArrayList<>();
+        Content content = new Content(
+                CommonUtil.generateUUID(),
+                request.getPageTitle(), request.getPageContent(),
+                request.getStatus() != null ? request.getStatus() : "draft",
+                LocalDateTime.now(), webImageList, mobileImageList
+        );
+        if (channel.equalsIgnoreCase("web")) {
+            savingWebContent(request, webImageList, content);
+
+        } else {
+            savingMobileContent(request, mobileImageList, content);
+
+        }
+
     }
 
-	private void savingMobileContent(ContentRequest request, List<MobileImage> mobileImageList, Content content) {
-		if(null == request.getMobileImages()) {
-			log.info("image should not be nulll");
-			throw new NullPointerException();
-		}
-		var imageFiles = request.getMobileImages();
-		try {
-		    for(MultipartFile imageFile : imageFiles) {
-		        if (imageFile != null && !imageFile.isEmpty()) {
-		            try {
-		                MobileImage image = new MobileImage();
-		                image.setImageData(imageFile.getBytes());
-		                image.setContent(content);
-		                mobileImageList.add(image);
-		            } catch (IOException e) {
-		                throw new RuntimeException("Failed to process image", e);
-		            }
-		        }
-		    }
-		    contentRepository.save(content);
-		} catch(Exception ex) {
-			log.error("Saving content to DB failed with the exception :: " , ex);
-		}
-	}
+    private void savingMobileContent(ContentRequest request, List<MobileImage> mobileImageList, Content content) {
+        if (null == request.getMobileImages()) {
+            log.info("image should not be nulll");
+            throw new NullPointerException();
+        }
+        var imageFiles = request.getMobileImages();
+        try {
+            for (MultipartFile imageFile : imageFiles) {
+                if (imageFile != null && !imageFile.isEmpty()) {
+                    processMobileImage(imageFile, mobileImageList, content);
+                }
+            }
+            contentRepository.save(content);
+        } catch (Exception ex) {
+            log.error("Saving content to DB failed with the exception :: ", ex);
+        }
+    }
 
-	private void savingWebContent(ContentRequest request, List<WebImage> webImageList, Content content) {
-		if(null == request.getWebImages()) {
-			log.info("image should not be nulll");
-			throw new NullPointerException();
-		}
-		var imageFiles = request.getWebImages();
-		try {
-		    for(MultipartFile imageFile : imageFiles) {
-		        if (imageFile != null && !imageFile.isEmpty()) {
-		            try {
-		                WebImage image = new WebImage();
-		                image.setImageData(imageFile.getBytes());
-		                image.setContent(content);
-		                webImageList.add(image);
-		            } catch (IOException e) {
-		                throw new RuntimeException("Failed to process image", e);
-		            }
-		        }
-		    }
-		    contentRepository.save(content);
-		} catch(Exception ex) {
-			log.error("Saving content to DB failed with the exception :: " , ex);
-		}
-	}
+    private void savingWebContent(ContentRequest request, List<WebImage> webImageList, Content content) {
+        if (null == request.getWebImages()) {
+            log.info("image should not be nulll");
+            throw new NullPointerException();
+        }
+        var imageFiles = request.getWebImages();
+        try {
+            for (MultipartFile imageFile : imageFiles) {
+                if (imageFile != null && !imageFile.isEmpty()) {
+                    processWebImage(imageFile, webImageList, content);
+                }
+            }
+            contentRepository.save(content);
+        } catch (Exception ex) {
+            log.error("Saving content to DB failed with the exception :: ", ex);
+        }
+    }
 
+    private void processMobileImage(MultipartFile imageFile, List<MobileImage> mobileImageList, Content content) {
+        try {
+            MobileImage image = new MobileImage();
+            image.setImageData(imageFile.getBytes());
+            image.setContent(content);
+            mobileImageList.add(image);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to process image", e);
+        }
+    }
+
+    private void processWebImage(MultipartFile imageFile, List<WebImage> webImageList, Content content) {
+        try {
+            WebImage image = new WebImage();
+            image.setImageData(imageFile.getBytes());
+            image.setContent(content);
+            webImageList.add(image);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to process image", e);
+        }
+    }
 
     public List<Content> getContent(List<String> byStatus, LocalDateTime from, LocalDateTime to) {
-        System.out.println("from :: " + from + " to :: " + to + " byStatus :: " + byStatus);
-    	try {
+        log.info("from :: {} to :: {} byStatus :: {}", from, to, byStatus);
+        try {
             Specification<Content> spec = (root, query, builder) -> {
                 var predicates = new ArrayList<Predicate>();
                 if (byStatus != null && !byStatus.isEmpty()) {
@@ -170,17 +173,20 @@ public class UserService {
                     var lowerCaseStatuses = byStatus.stream().map(String::toLowerCase).toList();
                     predicates.add(lowerCaseStatus.in(lowerCaseStatuses));
                 }
-                if (to != null) predicates.add(builder.lessThanOrEqualTo(root.get("createdAt"), to));
-                if (from != null) predicates.add(builder.greaterThanOrEqualTo(root.get("createdAt"), from));
+                if (to != null) {
+                    predicates.add(builder.lessThanOrEqualTo(root.get("createdAt"), to));
+                }
+                if (from != null) {
+                    predicates.add(builder.greaterThanOrEqualTo(root.get("createdAt"), from));
+                }
                 return builder.and(predicates.toArray(new Predicate[0]));
             };
             return contentRepository.findAll(spec);
-    	} catch(Exception ex) {
-    		log.error("Fetching content failed with exception ::", ex);
-    		return null;
-    	}
+        } catch (Exception ex) {
+            log.error("Fetching content failed with exception ::", ex);
+            return null;
+        }
     }
-
 
     public ContentDTO toContentDTO(Content content) {
         ContentDTO dto = new ContentDTO();
@@ -191,68 +197,68 @@ public class UserService {
         dto.setCreatedAt(content.getCreatedAt());
         return dto;
     }
-    
-    @Transactional
+
+    // @Transactional
     public void deleteContent(String id) {
-    	try {
-        if (!contentRepository.existsById(id)) {
-            throw new EntityNotFoundException("Content not found");
+        try {
+            if (!contentRepository.existsById(id)) {
+                throw new EntityNotFoundException("Content not found");
+            }
+            contentRepository.deleteById(id);
+        } catch (Exception ex) {
+            log.error("deleting content failed with exception :: ", ex);
         }
-        contentRepository.deleteById(id);
-    	} catch(Exception ex) {
-    		log.error("deleting content failed with exception :: ", ex);
-    	}
     }
-    
-    @Transactional
+
+    // @Transactional
     public ContentDTO partialUpdateById(String id, ContentUpdateRequest request) {
-    	try {
-        Content content = contentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Content not found with id: " + id));
+        try {
+            Content content = contentRepository.findById(id)
+                    .orElseThrow(() -> new RuntimeException("Content not found with id: " + id));
 
-        if (request.getPageTitle() != null && !request.getPageTitle().isBlank()) {
-            content.setPageTitle(request.getPageTitle());
-        }
-        if (request.getPageContent() != null && !request.getPageContent().isBlank()) {
-            content.setPageContent(request.getPageContent());
-        }
-        if (request.getStatus() != null && !request.getStatus().isBlank()) {
-            content.setStatus(request.getStatus());
-        }
+            if (request.getPageTitle() != null && !request.getPageTitle().isBlank()) {
+                content.setPageTitle(request.getPageTitle());
+            }
+            if (request.getPageContent() != null && !request.getPageContent().isBlank()) {
+                content.setPageContent(request.getPageContent());
+            }
+            if (request.getStatus() != null && !request.getStatus().isBlank()) {
+                content.setStatus(request.getStatus());
+            }
 
-        contentRepository.save(content);
-        return toContentDTO(content);
-        
-    	} catch(Exception ex) {
-    		log.error("Updating content by id failed with exception :: ", ex);
-    		return null;
-    	}
+            contentRepository.save(content);
+            return toContentDTO(content);
+
+        } catch (Exception ex) {
+            log.error("Updating content by id failed with exception :: ", ex);
+            return null;
+        }
     }
 
-    @Transactional(readOnly = true)
+    // @Transactional(readOnly = true)
     public List<ImageDTO> getWebImagesByContentId(String contentId) {
         return webImageRepository.findByContentId(contentId)
                 .stream()
                 .map(image -> new ImageDTO(
-                        image.getId(),
-                        image.getImageData(),
-                        image.getExpiresAt(),
-                        image.getCreatedAt()
-                ))
-                .collect(Collectors.toList());
+                image.getId(),
+                image.getImageData(),
+                image.getExpiresAt(),
+                image.getCreatedAt()
+        ))
+                .toList();
     }
 
-    @Transactional(readOnly = true)
+    // @Transactional(readOnly = true)
     public List<ImageDTO> getMobileImagesByContentId(String contentId) {
-    	return mobileImageRepository.findByContentId(contentId)
-    			.stream()
+        return mobileImageRepository.findByContentId(contentId)
+                .stream()
                 .map(image -> new ImageDTO(
-                        image.getId(),
-                        image.getImageData(),
-                        image.getExpiresAt(),
-                        image.getCreatedAt()
-                ))
-                .collect(Collectors.toList());
+                image.getId(),
+                image.getImageData(),
+                image.getExpiresAt(),
+                image.getCreatedAt()
+        ))
+                .toList();
     }
 
 }
